k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: customer-service
  name: customer-service
  namespace: default
spec:
  selector:
    matchLabels:
      run: customer-service
  template:
    metadata:
      labels:
        run: customer-service
    spec:
      containers:
      - image: registry.gitlab.com/customer-svc:6a8973b4
        name: customer-service
        imagePullPolicy: Always
        ports:
        - containerPort: 9000
          protocol: TCP
      imagePullSecrets:
        - name: gitlab-registry
