k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: customer-service
  name: customer-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 9000
  selector:
    run: customer-service
