k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: minikube-local-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: api.muble.co
    http:
      paths:
      - backend:
          serviceName: customer-service
          servicePort: 9000
        path: /customer(/|$)(.*)
